# Resale-venda_de_imoveis

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
