[tool.poetry]
name = "egorrodrigues"
version = "0.1.0"
description = "teste de habilidades"
authors = ["Egor Rodrigues <egor.rodrigues@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.18.3"
flake8 = "^4.0.1"
mypy = "^0.942"
isort = "^5.10.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
